[package]
name = "fibonacci-nb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-bindgen = { version = "5.1" }
uuid = "1.3.0"

[build-dependencies]
node-bindgen = { version = "5.1", features = ["build"] }

[lib]
crate-type = ["cdylib"]
